[gd_scene load_steps=10 format=4 uid="uid://bqgpbclle8qpc"]

[ext_resource type="Script" path="res://Scripts/3d_btn.gd" id="1_6taym"]
[ext_resource type="FontFile" uid="uid://ufs7obindayu" path="res://assets/Menu/font.TTF" id="2_c76ob"]
[ext_resource type="Material" uid="uid://nw8ovf7lddam" path="res://assets/3d_btn_material.tres" id="2_u6g5r"]
[ext_resource type="AudioStream" uid="uid://3n3foxtnxnto" path="res://assets/Audio/on_btn.wav" id="4_8wg0r"]
[ext_resource type="AudioStream" uid="uid://bhme7hx1r1hj8" path="res://assets/Audio/btn_click.wav" id="5_gan87"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l8m4t"]
size = Vector3(1, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_glwsv"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_wxqcb"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"format": 34359742465,
"index_count": 18,
"index_data": PackedByteArray("AwAEAAAAAgAEAAEABAADAAEABAACAAAAAAABAAMAAAACAAEA"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 5,
"vertex_data": PackedByteArray("AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIA/AACAvwAAgL8AAACAAACAPwAAgL8AAACAAAAAAAAAgD8AAACA")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_nmsuv"]
resource_name = "Select_Arrow_Cube"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 18,
"index_data": PackedByteArray("CgAOAAIABwANAAMADwALAAUADAAGAAAAAQAEAAkAAQAIAAQA"),
"material": SubResource("StandardMaterial3D_glwsv"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIA/AAAAAAAAgL8AAIA/AAAAAAAAgL8AAIA/AACAvwAAgL8AAACAAACAvwAAgL8AAACAAACAvwAAgL8AAACAAACAPwAAgL8AAACAAACAPwAAgL8AAACAAACAPwAAgL8AAACAAAAAAAAAgD8AAACAAAAAAAAAgD8AAACAAAAAAAAAgD8AAACAAAAAAAAAgD8AAACAmRnMzP///7//fwAA////v2XmzMz///+/zEyZmf///z//fwAA////vzKzmZn///8/mRnMzP///7/MTJmZ////P/9/AAD///+//38AAP///79l5szM////vzKzmZn///8/mRnMzP///7/MTJmZ////P2XmzMz///+/MrOZmf///z8=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_wxqcb")

[node name="3d_btn" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, -6)
script = ExtResource("1_6taym")
scene_path = "res://scenes/Menu/Menu.tscn"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_l8m4t")

[node name="gfx" type="CSGBox3D" parent="."]
material_override = ExtResource("2_u6g5r")
size = Vector3(1, 1, 3)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1.54738e-07, -3.54, -1.54738e-07, 0, -1.54738e-07, 3.54, -3.54, 1.54738e-07, 6.76383e-15, 0, 0.501062, 0)
text = "Back"
font = ExtResource("2_c76ob")

[node name="Select_Arrow" type="Node3D" parent="."]
transform = Transform3D(0.225, 0, 0, 0, -1.68289e-08, 0.225, 0, -0.385, -9.83506e-09, 0, 0.375083, 1.92986)

[node name="Select_Arrow" type="MeshInstance3D" parent="Select_Arrow"]
material_override = ExtResource("2_u6g5r")
mesh = SubResource("ArrayMesh_nmsuv")
skeleton = NodePath("")

[node name="On_btn" type="AudioStreamPlayer2D" parent="."]
position = Vector2(607, 312)
stream = ExtResource("4_8wg0r")
volume_db = 4.105

[node name="btn_click" type="AudioStreamPlayer2D" parent="."]
position = Vector2(607, 312)
stream = ExtResource("5_gan87")
volume_db = 3.42

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
